Closed Bug 560228 Opened 15 years ago Closed 15 years ago

assertion 'No docshell tree item for mDOMNode' when nsIAccessNode::rootDocument is called on application accessible

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: surkov, Assigned: surkov)

References

(Blocks 1 open bug)

Details

(Keywords: access)

Attachments

(1 file)

No description provided.
Attached patch patchSplinter Review
It asserts because mDOMNode of application accessible is null
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #439940 - Flags: review?(bolterbugz)
Comment on attachment 439940 [details] [diff] [review] patch sure, r=me
Attachment #439940 - Flags: review?(bolterbugz) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: