Bug 560228  - assertion 'No docshell tree item for mDOMNode' when nsIAccessNode::rootDocument is called on application accessible, r=davidb