accessible/src/base/nsApplicationAccessible.h
@@ -68,6 +68,9 @@ public:
   // nsISupports
   NS_DECL_ISUPPORTS_INHERITED
 
+  // nsIAccessNode
+  NS_IMETHOD GetRootDocument(nsIAccessibleDocument **aRootDocument);
+
   // nsIAccessible
   NS_IMETHOD GetName(nsAString& aName);
   NS_IMETHOD GetDescription(nsAString& aValue);
